--- a/Blasphemous.Framework.Credits/Blasphemous.Framework.Credits.csproj
+++ b/Blasphemous.Framework.Credits/Blasphemous.Framework.Credits.csproj
@@ -8,19 +8,19 @@
     <Product>Credits Framework</Product>
     <Authors>Damocles</Authors>
     <Company>Damocles</Company>
-    <Description>A mod for Blasphemous 1</Description>
+    <Description>Framework that allows other mods to implement sections in the game credits</Description>
     <Version>0.1.0</Version>
 
-    <TargetName>Credits</TargetName>
+    <TargetName>CreditsFramework</TargetName>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <DocumentationFile>bin\Release\$(TargetName).xml</DocumentationFile>
-    <RepositoryUrl>https://github.com/Example</RepositoryUrl>
+    <RepositoryUrl>https://github.com/BrandenEK/Blasphemous.Framework.Credits</RepositoryUrl>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blasphemous.ModdingAPI" Version="0.1.0" />
+    <PackageReference Include="Blasphemous.ModdingAPI" Version="2.2.0" />
     <PackageReference Include="Blasphemous.ModdingReferences" Version="4.0.67" />
   </ItemGroup>
 
